fix height when url bar is visible

--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
 }
 
 body, html {
+  height: 100%;
   max-width: 100vw;
   margin: 0 auto;
   overflow-x: hidden;
